# DayZ-Server-Admin-MCP

./: .env.example  .gitignore  README.md  dayz-server-admin-mcp.example.toml  pyproject.toml
src/dayz_server_admin_mcp/: __init__.py  config.py  dayz_config.py  ftp_client.py  remote_client.py  server.py
tests/: test_config.py  test_dayz_config.py  test_ftp_paths.py
